--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -87,8 +87,9 @@ ru:
         end_date: "Дата окончания"
       admin_age_policy:
         age: "Возраст"
-      admin_competition_request_response:
+      competition_request:
         response_id: "Ответ"
+        answer: "Пояснение"
       site_rule:
         locale: 'Язык'
         rules: 'Правила'
