--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,9 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  see_hints: "Смотри подсказки внизу"
+  hints: "Подсказки"
+  competition_info: "Информация о конкурсе"
   no_photo_loaded: "Пока нет загруженных фотографий, нажмите на кнопку выше."
   loaded_photos: "Загруженные фотографии"
   load_photos: "Загрузить фотографии"
