View comp photos via nomination select

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  nominations_: "Номинации"
   likes: "likes"
   place: "Место"
   rating: "Рейтинг"
