--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -80,7 +80,7 @@ ru:
   unseen: "Непросмотренные"
   last_24: "За последние 24 часа"
   unpublished: "Неопубликованные"
-  for_adults: "18+"
+  adults: "18+"
   for_review: "Для ревью"
   deleted_photos: "Удаленные"
   user_profile: "Профиль"
