--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -35,6 +35,7 @@ ru:
   loaded_photos: "Загруженные фотографии"
   load_photos: "Загрузить фотографии"
   request_sent: "Ваш запрос был отправлен администратору, зайдите сюда позже, когда запрос будет одобрен."
+  request_status: "Статус запроса"
   history: "История"
   send_request: "Подать запрос"
   on_news: "Новости сайта"
