--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -224,6 +224,7 @@ ru:
         list: "Конкурсы"
         results: "Итоги"
         title: "Название"
+        accept_date: "Дата начала приема"
         last_date: "Сдать работы до"
         open_date: "Дата оглашения результатов" 
         type: "Тип конкурса"     
@@ -308,6 +309,7 @@ ru:
         title: "Название"
         last_date: "Дата сдачи работ"
         open_date: "Дата открытия"
+        accept_date: "Дата начала приема"
         new: "Новый конкурс"
       view_posted:
         caption: "Фотографии"  
