--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -29,7 +29,7 @@ ru:
       updated: "Ваш пароль изменён. Теперь вы вошли в систему."
     registrations:
       destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть вас."
-      inactive_signed_up: "Добро пожаловать! Вы успешно зарегистрировались. Но пока вы не можете войти в систему, т.к. ваша учётная запись %{reason}."
+      inactive_signed_up: "Добро пожаловать! Вы успешно зарегистрировались. Но пока вы не можете войти в систему, т.к. ваша учётная запись %{reason}. Если вы не получили письмо, проверьте папку спам. Если и там нет просьба обращаться по адресу nyksu@yandex.ru"
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       updated: "Ваша учётная запись изменена."
     sessions:
