--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  tdp_presents: "Тюменский дом фотографии представляет вашему вниманию виртуальную выставку"
   nominations_: "Номинации"
   likes: "Понравилось"
   place: "Место"
