--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -1,9 +1,9 @@
 ru:
   devise:
     confirmations:
-      confirmed: "Ваша учётная запись подтверждена. Теперь вы вошли в систему."
-      send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
-      send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
+      confirmed: "Ваша учётная запись подтверждена. Вы вошли в систему."
+      send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по активации вашей учётной записи."
+      send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по активации вашей учётной записи."
     failure:
       already_authenticated: "Вы уже вошли в систему."
       inactive: "Ваша учётная запись ещё не активирована."
@@ -12,10 +12,10 @@ ru:
       locked: "Ваша учётная запись заблокирована."
       timeout: "Ваш сеанс закончился. Пожалуйста, войдите в систему снова."
       unauthenticated: "Вам необходимо войти в систему или зарегистрироваться."
-      unconfirmed: "Вы должны подтвердить вашу учётную запись."
+      unconfirmed: "Вы должны активировать вашу учётную запись."
     mailer:
       confirmation_instructions:
-        subject: "Инструкции по подтверждению учётной записи"
+        subject: "Инструкции по активации учётной записи"
       reset_password_instructions:
         subject: "Инструкции по восстановлению пароля"
       unlock_instructions:
@@ -26,10 +26,10 @@ ru:
     passwords:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
       send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
-      updated: "Ваш пароль изменён. Теперь вы вошли в систему."
+      updated: "Ваш пароль изменён. Вы вошли в систему."
     registrations:
       destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть вас."
-      inactive_signed_up: "Добро пожаловать! Вы успешно зарегистрировались. Но пока вы не можете войти в систему, т.к. ваша учётная запись %{reason}. Если вы не получили письмо, проверьте папку спам. Если и там нет просьба обращаться по адресу nyksu@yandex.ru"
+      inactive_signed_up: "Добро пожаловать! Вы успешно зарегистрировались. Но пока вы не можете войти в систему, т.к. ваша учётная запись не активирована. Если вы не получили письмо, проверьте папку спам. Если и там нет, просьба обращаться по адресу nyksu@yandex.ru"
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       updated: "Ваша учётная запись изменена."
     sessions:
@@ -38,7 +38,7 @@ ru:
     unlocks:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по разблокировке вашей учётной записи."
       send_paranoid_instructions: "Если ваша учётная запись существует, то в течение нескольких минут вы получите письмо с инструкциями по её разблокировке."
-      unlocked: "Ваша учётная запись разблокирована. Теперь вы вошли в систему."
+      unlocked: "Ваша учётная запись разблокирована. Вы вошли в систему."
   errors:
     messages:
       already_confirmed: "уже подтверждена. Пожалуйста, попробуйте войти в систему"
